<resources>
    <string name="app_name">AplikasiPengidentifikasiLuka</string>
    <string name="camera_button_content_description">Open Camera</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="wound_check">Cek Luka</string>
    <string name="history">Riwayat</string>
    <string name="wound_image">Gambar Luka</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="wound_type">Jenis Luka</string>
    <string name="accuracy">Akurasi</string>
    <string name="laserisasi">Laserisasi</string>
    <string name="process">Process</string>
    <string name="save">save</string>
    <string name="reset">reset</string>
    <string name="delete">Delete</string>
</resources>